--- a/Presentation/ReDoMusic.MVC/appsettings.json
+++ b/Presentation/ReDoMusic.MVC/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TextPath": "C:\\Users\\kado\\Desktop\\TextFiles\\"
 }
